tests/ui/asm/invalid-sym-operand.stderr
error: invalid `sym` operand
  --> $DIR/invalid-sym-operand.rs:14:24
   |
LL |         asm!("{}", sym x);
   |                        ^ is a local variable
   |
   = help: `sym` operands must refer to either a function or a static

error: invalid `sym` operand
  --> $DIR/invalid-sym-operand.rs:12:20
   |
LL |         asm!("{}", sym C);
   |                    ^^^^^ is an `i32`
   |
   = help: `sym` operands must refer to either a function or a static

error: invalid `sym` operand
  --> $DIR/invalid-sym-operand.rs:29:19
   |
LL | global_asm!("{}", sym C);
   |                   ^^^^^ is an `i32`
   |
   = help: `sym` operands must refer to either a function or a static

error: aborting due to 3 previous errors

